--- a/style.css
+++ b/style.css
@@ -19,11 +19,12 @@ body {
     width: 170px;
     height: 170px;
     background-color: orange;
-    font-size: 25px;
+    font-size: 30px;
     border: solid 2px black;
     border-radius: 30px;
-    color: aquamarine;
+    color: black;
     margin-top: 200px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 #game-over {
@@ -41,7 +42,10 @@ body {
 
 h1, h2 {
     display: flex;
-    margin: 60px 0;
+    margin: 20px 0 50px 0;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 100;
+    font-size: 40px;
 }
 
 h1 {
@@ -52,4 +56,13 @@ h1 {
     display: flex;
     margin-top: 30px;
     width: 250px;;
+}
+
+#try-again {
+    width: 130px;
+    height: 100px;
+    border-radius: 40px;
+    background-color: orange;
+    font-size: 20px;
+    border: solid 2px;
 }
