--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: blue;
+    background-color: rgb(5, 81, 143);
     margin: 0;
 }
 
@@ -9,10 +9,12 @@ body {
     background-size: 100% 680px;
 }
 
-#btn {
+#screen1 {
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 680px;
+    flex-direction: column;
 }
 
 #start {
@@ -23,7 +25,6 @@ body {
     border: solid 2px black;
     border-radius: 30px;
     color: black;
-    margin-top: 200px;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -52,6 +53,18 @@ h1 {
     font-size: 50px;
 }
 
+#directions {
+    display: flex;
+    flex-direction: column;
+    border: solid 4px;
+    width: 300px;
+    height: 300px;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 30px 30px 0 30px;
+    background-color: rgb(134, 204, 236);
+    margin-bottom: 30px;
+}
+
 #tomb {
     display: flex;
     margin-top: 30px;
@@ -65,4 +78,22 @@ h1 {
     background-color: orange;
     font-size: 20px;
     border: solid 2px;
+}
+
+#icones {
+    display: flex;
+    flex-direction: column;
+}
+
+#arrows {
+    padding: 0 10px;
+}
+
+#space {
+    padding: 0 10px;
+}
+
+.icone {
+    margin: auto;
+    margin-bottom: 20px;
 }
