--- a/style.css
+++ b/style.css
@@ -17,22 +17,33 @@ body {
     flex-direction: column;
 }
 
+#fish1 {
+    margin-top: 15px;
+}
+
+#logo {
+    margin-bottom: 40px;
+    margin-top: 10px;
+    width: 380px;
+}
+
 #start {
-    width: 170px;
-    height: 170px;
-    background-color: orange;
-    font-size: 30px;
+    width: 100px;
+    height: 100px;
+    background-color: rgb(240, 237, 84);
+    font-size: 25px;
     border: solid 2px black;
-    border-radius: 30px;
+    border-radius: 70px;
     color: black;
     font-family: Arial, Helvetica, sans-serif;
+    box-shadow: 2px 2px 10px 0px;
+    margin-top: -60px;
 }
 
 #game-over {
-    display: flex;
+    align-items: center;
     flex-direction: column;
     justify-content: flex-end;
-    align-items: center;
     width: 500px;
     height: 680px;
     background-image: none;
@@ -43,7 +54,7 @@ body {
 
 h1, h2 {
     display: flex;
-    margin: 20px 0 50px 0;
+    margin: 30px auto;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 100;
     font-size: 40px;
@@ -57,27 +68,31 @@ h1 {
     display: flex;
     flex-direction: column;
     border: solid 4px;
-    width: 300px;
-    height: 300px;
+    width: 350px;
+    height: 250px;
     font-family: Arial, Helvetica, sans-serif;
-    padding: 30px 30px 0 30px;
-    background-color: rgb(134, 204, 236);
+    padding: 0px 15px 0 25px;
+    background-color: rgb(94, 207, 241);
     margin-bottom: 30px;
+    align-items: flex-start;
 }
 
 #tomb {
     display: flex;
     margin-top: 30px;
-    width: 250px;;
+    width: 250px;
+    margin-left: 50px;
 }
 
 #try-again {
     width: 130px;
     height: 100px;
-    border-radius: 40px;
-    background-color: orange;
+    border-radius: 50px;
+    background-color:rgb(240, 237, 84);
+    box-shadow: 2px 2px 10px 0px;
     font-size: 20px;
     border: solid 2px;
+    margin-top: -20px;
 }
 
 #icones {
@@ -96,4 +111,14 @@ h1 {
 .icone {
     margin: auto;
     margin-bottom: 20px;
+}
+
+#end-box {
+    display: flex;
+    flex-direction: column;
+    width: 350px;
+    height: 250px;
+    justify-content: center;
+    border: solid 4px black;
+    background-color: rgb(94, 207, 241);
 }
