--- a/style.css
+++ b/style.css
@@ -1,25 +1,35 @@
 body {
+    min-height: 100%;
     background-color: rgb(5, 81, 143);
+    display: flex;
+    height: 100%;
     margin: 0;
 }
 
+html {
+    height: 100%;
+}
+
 #background {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+    border: solid 5px black;
     background-image: url(images/bg.png);
     background-repeat: no-repeat;
-    background-size: 100% 680px;
+    background-size: 1130px 680px;
 }
 
 #screen1 {
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: space-evenly;
+    width: 1130px;
     height: 680px;
     flex-direction: column;
 }
 
-#fish1 {
-    margin-top: 15px;
-}
 
 #logo {
     margin-bottom: 40px;
@@ -44,12 +54,8 @@ body {
     align-items: center;
     flex-direction: column;
     justify-content: flex-end;
-    width: 500px;
+    width: 1130px;
     height: 680px;
-    background-image: none;
-    border: none;
-    border-radius: 20px;
-    margin: auto;
 }
 
 h1, h2 {
@@ -67,7 +73,7 @@ h1 {
 #directions {
     display: flex;
     flex-direction: column;
-    border: solid 4px;
+    border: solid 5px;
     width: 350px;
     height: 250px;
     font-family: Arial, Helvetica, sans-serif;
