--- a/style.css
+++ b/style.css
@@ -21,6 +21,8 @@ html {
     background-size: 1130px 680px;
 }
 
+/* First screen */
+
 #screen1 {
     display: flex;
     align-items: center;
@@ -30,10 +32,42 @@ html {
     flex-direction: column;
 }
 
-
 #logo {
     width: 350px;
 }
+
+#directions {
+    display: flex;
+    flex-direction: column;
+    border: solid 5px;
+    width: 350px;
+    height: 250px;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 0px 15px 0 25px;
+    background-color: rgb(94, 207, 241);
+    margin-bottom: 30px;
+    align-items: flex-start;
+}
+
+#icones {
+    display: flex;
+    flex-direction: column;
+}
+
+#arrows {
+    padding: 0 10px;
+}
+
+#space {
+    padding: 0 10px;
+}
+
+.icone {
+    margin: auto;
+    margin-bottom: 20px;
+}
+
+/* Game */
 
 #start {
     width: 100px;
@@ -47,6 +81,8 @@ html {
     box-shadow: 2px 2px 10px 0px;
     margin-top: -60px;
 }
+
+/* Game over screen */
 
 #game-over {
     align-items: center;
@@ -68,19 +104,6 @@ h1 {
     font-size: 50px;
 }
 
-#directions {
-    display: flex;
-    flex-direction: column;
-    border: solid 5px;
-    width: 350px;
-    height: 250px;
-    font-family: Arial, Helvetica, sans-serif;
-    padding: 0px 15px 0 25px;
-    background-color: rgb(94, 207, 241);
-    margin-bottom: 30px;
-    align-items: flex-start;
-}
-
 #tomb {
     display: flex;
     margin-top: 30px;
@@ -92,29 +115,11 @@ h1 {
     width: 130px;
     height: 100px;
     border-radius: 50px;
-    background-color:rgb(240, 237, 84);
+    background-color: rgb(240, 237, 84);
     box-shadow: 2px 2px 10px 0px;
     font-size: 20px;
     border: solid 2px;
     margin-top: -20px;
-}
-
-#icones {
-    display: flex;
-    flex-direction: column;
-}
-
-#arrows {
-    padding: 0 10px;
-}
-
-#space {
-    padding: 0 10px;
-}
-
-.icone {
-    margin: auto;
-    margin-bottom: 20px;
 }
 
 #end-box {
@@ -126,4 +131,3 @@ h1 {
     border: solid 4px black;
     background-color: rgb(94, 207, 241);
 }
-
